--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ uvicorn[standard]==0.29.0
 pydantic==2.6.4
 pydantic-settings==2.2.1
 python-multipart==0.0.9
+numpy<2
 opencv-python==4.9.0.80
 pdf2image==1.17.0
 pytesseract==0.3.10
